--- a/Assignments/A01/Dangerfield_Assignment01.ipynb
+++ b/Assignments/A01/Dangerfield_Assignment01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYMnfHNGkm+6ay+JVa93dR",
+      "authorship_tag": "ABX9TyPuVH2X/wc4EBCAd9x8DWK+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "nj4Y-ThsDi8x"
       },
@@ -44,19 +44,18 @@
       "source": [
         "# create a data frame with the data from cc2\n",
         "df = pd.read_csv('cc2.csv')\n",
-        "# shows a tabular visual of the data\n",
-        "#df.transpose()\n",
+        "\n",
         "df.describe()"
       ],
       "metadata": {
-        "id": "jsAr6F2XFQcg",
-        "outputId": "34048bee-c3a0-4e23-d4e6-1a1fdb7ce5d1",
+        "id": "Tt3uFrvGKDXm",
+        "outputId": "74ef57e5-97b0-43f2-a839-4a10cd9b7cf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
         }
       },
-      "execution_count": 12,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +105,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a85569da-1b70-46ba-bf1b-95f5209b09e4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-edad3674-8cd5-4838-8ca1-fdbe4780ff2c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -348,7 +347,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a85569da-1b70-46ba-bf1b-95f5209b09e4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-edad3674-8cd5-4838-8ca1-fdbe4780ff2c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -400,12 +399,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a85569da-1b70-46ba-bf1b-95f5209b09e4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-edad3674-8cd5-4838-8ca1-fdbe4780ff2c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a85569da-1b70-46ba-bf1b-95f5209b09e4');\n",
+              "        const element = document.querySelector('#df-edad3674-8cd5-4838-8ca1-fdbe4780ff2c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -425,8 +424,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c2ab2830-8c36-43bb-a48f-ea1700f0931f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c2ab2830-8c36-43bb-a48f-ea1700f0931f')\"\n",
+              "    <div id=\"df-946df71c-1877-451e-869b-1392b1f5ab98\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-946df71c-1877-451e-869b-1392b1f5ab98')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -545,7 +544,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c2ab2830-8c36-43bb-a48f-ea1700f0931f button');\n",
+              "            document.querySelector('#df-946df71c-1877-451e-869b-1392b1f5ab98 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -560,7 +559,41 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# calculate the min, max, mean, and median of the yield (weight)\n",
+        "min = df['Weight per row (lbs)'].min()\n",
+        "print('min:', min)\n",
+        "max = df['Weight per row (lbs)'].max()\n",
+        "print('max:', max)\n",
+        "mean = df['Weight per row (lbs)'].mean()\n",
+        "print('mean:', mean)\n",
+        "median = df['Weight per row (lbs)'].median()\n",
+        "print('median:', median)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "naudA4USGl3P",
+        "outputId": "7ff0e51e-c3e7-4b23-8833-f0919aa968a1"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "min: 0.0\n",
+            "max: 15.65\n",
+            "mean: 6.619561142857143\n",
+            "median: 6.512\n"
+          ]
         }
       ]
     }
