--- a/Assignments/A01/Dangerfield_Assignment01.ipynb
+++ b/Assignments/A01/Dangerfield_Assignment01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNONl2OZRttIBjYBWecWAlN",
+      "authorship_tag": "ABX9TyMNmNPJvKNoZ5aue1aY5LxC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "nj4Y-ThsDi8x"
       },
@@ -58,13 +58,13 @@
       ],
       "metadata": {
         "id": "Tt3uFrvGKDXm",
-        "outputId": "d5fdf372-895c-44e1-9fbc-e8c3ccb459db",
+        "outputId": "f8cd74f2-3a13-4637-c330-eb9eceb3e0ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
         }
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-53907e1a-0bd0-4619-a3f8-e18249ab7314\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-44d850cb-0e01-4c73-9bcd-9d6f90bc582d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -356,7 +356,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53907e1a-0bd0-4619-a3f8-e18249ab7314')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44d850cb-0e01-4c73-9bcd-9d6f90bc582d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -408,12 +408,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-53907e1a-0bd0-4619-a3f8-e18249ab7314 button.colab-df-convert');\n",
+              "        document.querySelector('#df-44d850cb-0e01-4c73-9bcd-9d6f90bc582d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-53907e1a-0bd0-4619-a3f8-e18249ab7314');\n",
+              "        const element = document.querySelector('#df-44d850cb-0e01-4c73-9bcd-9d6f90bc582d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -433,8 +433,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-474623ba-c79d-42f3-9197-de940f294e3e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-474623ba-c79d-42f3-9197-de940f294e3e')\"\n",
+              "    <div id=\"df-37c371cd-9d10-44b1-8c6e-d5f710e3bf60\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-37c371cd-9d10-44b1-8c6e-d5f710e3bf60')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -553,7 +553,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-474623ba-c79d-42f3-9197-de940f294e3e button');\n",
+              "            document.querySelector('#df-37c371cd-9d10-44b1-8c6e-d5f710e3bf60 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -568,7 +568,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -591,9 +591,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "naudA4USGl3P",
-        "outputId": "0a68ee71-60cc-4a19-9cb1-4ec878faa18f"
+        "outputId": "8128a636-edc2-4e49-a07f-77ddb2cbbabb"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,9 +623,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p-BSeXSviwdR",
-        "outputId": "358f8c44-4f23-4d99-cfe0-f8ac50e57f04"
+        "outputId": "36f3ace8-482c-4e7d-e57a-ea9fbd653fa2"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,9 +652,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-WAYcTtLj8h1",
-        "outputId": "838cb96c-fb48-47f5-b2be-1655ef5c6504"
+        "outputId": "844c620b-ed00-46e6-da45-54c6f033a76a"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,9 +678,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZvKOdibElyZZ",
-        "outputId": "98eb80ff-d653-4bd5-8bb3-a5800db91c39"
+        "outputId": "ab04e082-4970-4cc0-ad1a-222232ca4b5a"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,9 +738,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "09G4zz1CoouB",
-        "outputId": "5d4ec7d1-bdde-4080-8bfb-8abc10a997dc"
+        "outputId": "f539ca78-ff74-4429-e10c-c78164a0d134"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +769,7 @@
       "metadata": {
         "id": "yZDy4VWlo2og"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -779,14 +779,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "56a39b22",
-        "outputId": "27c738b1-08d7-4a5f-e243-ce99a3db8eaa"
+        "outputId": "bbc7f26d-98d3-4e5b-b84d-0c9b2ef44e74"
       },
       "source": [
         "# identify canopy cover columns\n",
         "canopy_cover_cols = [col for col in df.columns if col.startswith('cc_')]\n",
         "print(\"Canopy cover columns:\", canopy_cover_cols)"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +806,7 @@
         },
         "collapsed": true,
         "id": "32769aa0",
-        "outputId": "de6f8337-a249-48e7-eaf6-7abe3558aef2"
+        "outputId": "2602e4e1-a1f9-40a0-e502-8e932d211113"
       },
       "source": [
         "# Create scatter plots between each canopy cover feature and yield.\n",
@@ -821,7 +821,7 @@
         "    correlation = df[col].corr(df['Weight per row (lbs)'])\n",
         "    print(f'Correlation between {col} and Weight per row (lbs): {correlation:.4f}')"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1310,9 +1310,9 @@
           "height": 1000
         },
         "id": "qxaK9ma1seq5",
-        "outputId": "9e429043-3272-4e17-a5e3-a1e5a2b6a7f9"
+        "outputId": "dfea8ff0-bde9-4310-8361-b9bedc4e8819"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1912,6 +1912,73 @@
       "metadata": {
         "id": "Zpnu0O7buo68"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Modeling"
+      ],
+      "metadata": {
+        "id": "KzvuwAEcn-BR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Split the Data into three subsets (training, validation, and test)\n",
+        "- all sets should keep track of parameter settings and their impact on validation performance"
+      ],
+      "metadata": {
+        "id": "Vmc7nf21oHXq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sklearn\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Training Set (70-80%): Used to train the model\n"
+      ],
+      "metadata": {
+        "id": "taCUC9EkoAtr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Validation Set: Part of the training set to evaluate the model during training and guide tuning decisions"
+      ],
+      "metadata": {
+        "id": "rxgMzB-HogFM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Set: Set aside until final evaluation"
+      ],
+      "metadata": {
+        "id": "ww-HA0YWorH4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5eb4ab9e"
+      },
+      "source": [
+        "# Split data into training set (70-80%) and temporary set\n",
+        "train_df, temp_df = train_test_split(df, test_size=0.25, random_state=42) # Using 75% for training and 25% for temporary"
+      ],
       "execution_count": null,
       "outputs": []
     }
