--- a/Assignments/A01/Dangerfield_Assignment01.ipynb
+++ b/Assignments/A01/Dangerfield_Assignment01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO399teDHR+BkTB0xLkMrdw",
+      "authorship_tag": "ABX9TyN2w9A7QTaWiU2kCAHQF2GP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "Tt3uFrvGKDXm"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,9 +78,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "naudA4USGl3P",
-        "outputId": "bd62f737-2511-4f47-b3d0-facf94da36f7"
+        "outputId": "e5bbe11b-7646-4ee9-ce20-f304b2dc670e"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,9 +110,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p-BSeXSviwdR",
-        "outputId": "702ac9ac-2938-4407-ca87-ade7878b5b2a"
+        "outputId": "bb52bf2c-21b6-4e45-ebc3-537142d7a898"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-WAYcTtLj8h1",
-        "outputId": "0fc32f05-55c2-4fbd-f5a1-bad9083d8e42"
+        "outputId": "c3837a4c-63b6-4bb5-d33f-5563264c123f"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZvKOdibElyZZ",
-        "outputId": "1ef3845c-5639-4a38-ab15-504f862d93f7"
+        "outputId": "2fb96a39-65f7-4869-dbd9-c1857952bd62"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "09G4zz1CoouB",
-        "outputId": "bb582cb2-3b4d-45fd-8caf-54b1d43f6fda"
+        "outputId": "4c0b3ade-aaf0-4938-d301-88456fe1ca03"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "yZDy4VWlo2og"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -266,14 +266,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "56a39b22",
-        "outputId": "518dd0b7-01fd-4a2b-ad7c-9163f43c7e9b"
+        "outputId": "15e6bf71-1275-4be5-c15f-e9cb7fa21c77"
       },
       "source": [
         "# identify canopy cover columns\n",
         "canopy_cover_cols = [col for col in df.columns if col.startswith('cc_')]\n",
         "print(\"Canopy cover columns:\", canopy_cover_cols)"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +293,7 @@
         },
         "collapsed": true,
         "id": "32769aa0",
-        "outputId": "dc995d69-3571-4eff-aa98-778910cc4d4d"
+        "outputId": "38682567-3b70-4a6f-df06-7b389580a1af"
       },
       "source": [
         "# Create scatter plots between each canopy cover feature and yield.\n",
@@ -308,7 +308,7 @@
         "    correlation = df[col].corr(df['Weight per row (lbs)'])\n",
         "    print(f'Correlation between {col} and Weight per row (lbs): {correlation:.4f}')"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -797,9 +797,9 @@
           "height": 1000
         },
         "id": "qxaK9ma1seq5",
-        "outputId": "4ac34a43-08b4-455f-a3ea-9cc0e823193b"
+        "outputId": "8dfe404e-d9e5-442f-b615-8c977b78e671"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1424,14 +1424,72 @@
     {
       "cell_type": "code",
       "source": [
-        "import sklearn\n",
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "# Split data into training set (70-80%) and temporary set\n",
-        "train_df, temp_df = train_test_split(df, test_size=0.25, random_state=42)"
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.neighbors import KNeighborsRegressor\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+        "import joblib"
       ],
       "metadata": {
-        "id": "taCUC9EkoAtr"
+        "id": "B3N92as4ClHR"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# features\n",
+        "X = df.drop(columns=[\"Weight per row (lbs)\"])\n",
+        "# target\n",
+        "y = df[\"Weight per row (lbs)\"]\n",
+        "\n",
+        "# split the data into train, validation, and test\n",
+        "X_train_val, X_test, y_train_val, y_test = train_test_split(X, y, test_size=0.15, random_state=42)\n",
+        "\n",
+        "# split the train_validation into train and validation\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.1765, random_state=42)\n",
+        "\n",
+        "print(f\"Training size: {X_train.shape[0]}\")\n",
+        "print(f\"Validation size: {X_val.shape[0]}\")\n",
+        "print(f\"Test size: {X_test.shape[0]}\")"
+      ],
+      "metadata": {
+        "id": "SadZZZlrArM1",
+        "outputId": "b926dccc-0b48-44a6-f261-adf8d0a5d486",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training size: 611\n",
+            "Validation size: 132\n",
+            "Test size: 132\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate_model(name, model, X_val, y_val):\n",
+        "  y_pred = model.predict(X_val)\n",
+        "  mse = mean_squared_error(y_val, y_pred)\n",
+        "  mae = mean_absolute_error(y_val, y_pred)\n",
+        "  r2 = r2_score(y_val, y_pred)\n",
+        "\n",
+        "  return {\"Model\": name, \"Mean Squared Error\": mse, \"Mean Absolute Error\": mae, \"R2\": r2}\n",
+        "\n",
+        "results = []"
+      ],
+      "metadata": {
+        "id": "hB_weNcQDa6N"
       },
       "execution_count": null,
       "outputs": []
@@ -1439,13 +1497,59 @@
     {
       "cell_type": "code",
       "source": [
-        "# Split the temporary set into validation (12.5%) and test (12.5%) sets\n",
-        "val_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42)"
+        "# Linear Regression Model\n",
+        "lr_model = LinearRegression()\n",
+        "lr_model.fit(X_train, y_train)\n",
+        "results.append(evaluate_model(\"Linear Regression\", lr_model, X_val, y_val))"
       ],
       "metadata": {
-        "id": "rxgMzB-HogFM"
+        "id": "hQyCOoe4EKUl"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# KNN (using different K values)\n",
+        "for k in [3, 5, 7, 9]:\n",
+        "    knn_model = KNeighborsRegressor(n_neighbors=k)\n",
+        "    knn_model.fit(X_train, y_train)\n",
+        "    results.append(evaluate_model(f\"KNN (k={k})\", knn_model, X_val, y_val))"
+      ],
+      "metadata": {
+        "id": "ftfMpp4sEl_m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Random Forest (using different n_estimators)\n",
+        "for n in [50, 100, 200]:\n",
+        "  rf_model = RandomForestRegressor(n_estimators=n, random_state=42)\n",
+        "  rf_model.fit(X_train, y_train)\n",
+        "  results.append(evaluate_model(f\"Random Forest (n={n})\", rf_model, X_val, y_val))"
+      ],
+      "metadata": {
+        "id": "LHmWTQ96FQTd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Validation Results Table\n",
+        "results_df = pd.DataFrame(results)\n",
+        "print(\"\\nValidation Results:\")\n",
+        "print(results_df)"
+      ],
+      "metadata": {
+        "id": "HaGd9Cj9Fw6r"
+      },
+      "execution_count": 18,
       "outputs": []
     }
   ]
