--- a/Assignments/A01/Dangerfield_Assignment01.ipynb
+++ b/Assignments/A01/Dangerfield_Assignment01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEwGXU+3HpdUwIqf9VGxu3",
+      "authorship_tag": "ABX9TyMdSf0oD4vr4nrtNIkwSN+z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/jay-d515/5323-MachineLearning/blob/main/Assignments/A01/Dangerfield_Assignment01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CMPS5323 - Assignment 1\n",
+        "In this assignment, I practice essential Machine Learning skills: data analysis, processing, visualization, modeling, evaluation, and performace. Using the the canopy cover dataset, cc2.csv, I performed at leas"
+      ],
+      "metadata": {
+        "id": "z3kzNv3fz3Ya"
+      }
     },
     {
       "cell_type": "code",
@@ -78,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "naudA4USGl3P",
-        "outputId": "36378a8c-db8b-4a43-c70f-314525b193a5"
+        "outputId": "46ad41e8-2971-4f8e-e79c-2e17b8bbec4b"
       },
       "execution_count": 3,
       "outputs": [
@@ -110,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p-BSeXSviwdR",
-        "outputId": "0bfbd7eb-6d10-40a5-af67-5683c2e017fd"
+        "outputId": "b5bbf4ed-929a-45db-adae-c802a955e594"
       },
       "execution_count": 4,
       "outputs": [
@@ -139,7 +149,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-WAYcTtLj8h1",
-        "outputId": "808d0cd9-b4b0-4461-c72d-a54595be95f0"
+        "outputId": "fd08db65-04fc-49ba-e231-cbbabbc72a9a"
       },
       "execution_count": 5,
       "outputs": [
@@ -156,20 +166,26 @@
     {
       "cell_type": "code",
       "source": [
-        "#drop_cols = [\"row\", \"col\", \"rep\", \"line\", \"grid\", \"Row\", \"irrigation\"]\n",
-        "#df = df.drop(columns=drop_cols)\n",
+        "# drop columns that aren't being used (row, col, rep, line, grid, Row, irrigation)\n",
+        "drop_cols = [\"row\", \"col\", \"rep\", \"line\", \"grid\", \"Row\", \"irrigation\"]\n",
+        "df = df.drop(columns=drop_cols)\n",
         "\n",
+        "# count how many rows contain at least one NaN\n",
         "missing_values = df.isnull().sum()\n",
-        "print(missing_values)"
+        "print(missing_values)\n",
+        "\n",
+        "# count the total number of missing (NaN values in the dataset)\n",
+        "total_missing = missing_values.sum()\n",
+        "print(f\"\\nTotal missing values in the dataset: {total_missing}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZvKOdibElyZZ",
-        "outputId": "c768964c-ae28-40c9-e95e-5387f3780728"
+        "outputId": "87c16965-b08b-4263-b407-b8c8bad8bf42"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +219,9 @@
             "cc_0802                 0\n",
             "cc_0808                 0\n",
             "cc_0812                 1\n",
-            "dtype: int64\n"
+            "dtype: int64\n",
+            "\n",
+            "Total missing values in the dataset: 17\n"
           ]
         }
       ]
@@ -220,9 +238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "09G4zz1CoouB",
-        "outputId": "c0af311e-2fae-4d8f-8b2b-b1f819c29b31"
+        "outputId": "a00f0770-b9e4-4cbe-b292-34da24afdee3"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +269,7 @@
       "metadata": {
         "id": "yZDy4VWlo2og"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -261,14 +279,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "56a39b22",
-        "outputId": "5d07ad3f-83fe-40c0-c539-40f91f658792"
+        "outputId": "39bec97a-5fbf-4c67-bda6-3918d925d687"
       },
       "source": [
         "# identify canopy cover columns\n",
         "canopy_cover_cols = [col for col in df.columns if col.startswith('cc_')]\n",
         "print(\"Canopy cover columns:\", canopy_cover_cols)"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +306,7 @@
         },
         "collapsed": true,
         "id": "32769aa0",
-        "outputId": "a635918b-7018-48b8-a0de-bd13d7de7c6f"
+        "outputId": "0346325d-50b6-4a4c-8695-17d59c36dec6"
       },
       "source": [
         "# Create scatter plots between each canopy cover feature and yield.\n",
@@ -303,7 +321,7 @@
         "    correlation = df[col].corr(df['Weight per row (lbs)'])\n",
         "    print(f'Correlation between {col} and Weight per row (lbs): {correlation:.4f}')"
       ],
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,9 +810,9 @@
           "height": 1000
         },
         "id": "qxaK9ma1seq5",
-        "outputId": "999ca2d0-89b0-45bf-d894-5e3fa248089e"
+        "outputId": "fb4cd4f7-2bd2-4b39-be0f-1096718beb12"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1283,7 +1301,7 @@
       "metadata": {
         "id": "Zpnu0O7buo68"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1293,16 +1311,6 @@
       ],
       "metadata": {
         "id": "KzvuwAEcn-BR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1. Split the Data into three subsets (training, validation, and test)\n",
-        "- all sets should keep track of parameter settings and their impact on validation performance"
-      ],
-      "metadata": {
-        "id": "Vmc7nf21oHXq"
       }
     },
     {
@@ -1317,7 +1325,7 @@
       "metadata": {
         "id": "B3N92as4ClHR"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1334,6 +1342,7 @@
         "# split the train_validation into train and validation\n",
         "X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.1765, random_state=42)\n",
         "\n",
+        "# print the size of each subset\n",
         "print(f\"Training size: {X_train.shape[0]}\")\n",
         "print(f\"Validation size: {X_val.shape[0]}\")\n",
         "print(f\"Test size: {X_test.shape[0]}\")"
@@ -1343,9 +1352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SadZZZlrArM1",
-        "outputId": "7b7dbfea-ef26-4e5c-ea8e-da16850f2637"
+        "outputId": "d79a091c-c057-4fca-854f-e8995a44915c"
       },
-      "execution_count": 20,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1361,6 +1370,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# this method evalutes the models\n",
         "def evaluate_model(name, model, X_val, y_val):\n",
         "  y_pred = model.predict(X_val)\n",
         "  mse = mean_squared_error(y_val, y_pred)\n",
@@ -1374,36 +1384,42 @@
       "metadata": {
         "id": "hB_weNcQDa6N"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Linear Regression Model\n",
+        "# create the linear regression model\n",
         "lr_model = LinearRegression()\n",
+        "# train the model with data\n",
         "lr_model.fit(X_train, y_train)\n",
+        "# evaluate the model\n",
         "results.append(evaluate_model(\"Linear Regression\", lr_model, X_val, y_val))"
       ],
       "metadata": {
         "id": "hQyCOoe4EKUl"
       },
-      "execution_count": 22,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# KNN (using different K values)\n",
+        "# K-Nearest Neighbor (using different K values)\n",
         "for k in [3, 5, 7, 9]:\n",
+        "    # create the KNN model\n",
         "    knn_model = KNeighborsRegressor(n_neighbors=k)\n",
+        "    # train the model with data\n",
         "    knn_model.fit(X_train, y_train)\n",
+        "    # evaluate the model\n",
         "    results.append(evaluate_model(f\"KNN (k={k})\", knn_model, X_val, y_val))"
       ],
       "metadata": {
         "id": "ftfMpp4sEl_m"
       },
-      "execution_count": 23,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1411,15 +1427,27 @@
       "source": [
         "# Random Forest (using different n_estimators)\n",
         "for n in [50, 100, 200]:\n",
+        "  # create the random forest model\n",
         "  rf_model = RandomForestRegressor(n_estimators=n, random_state=42)\n",
+        "  # train the model with data\n",
         "  rf_model.fit(X_train, y_train)\n",
+        "  # evaluate the model\n",
         "  results.append(evaluate_model(f\"Random Forest (n={n})\", rf_model, X_val, y_val))"
       ],
       "metadata": {
         "id": "LHmWTQ96FQTd"
       },
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Evaluation"
+      ],
+      "metadata": {
+        "id": "HkSb4LZ6zmFE"
+      }
     },
     {
       "cell_type": "code",
@@ -1431,13 +1459,13 @@
         "print(results_df)"
       ],
       "metadata": {
-        "id": "pgVUlbKAn_7F",
-        "outputId": "c2499585-fe62-4929-a1db-55895ab9d992",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pgVUlbKAn_7F",
+        "outputId": "9f00fa69-1c62-480e-eefc-010dcd49e0d3"
       },
-      "execution_count": 25,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1467,13 +1495,13 @@
         "print(best_model)"
       ],
       "metadata": {
-        "id": "kHhdOTYToon7",
-        "outputId": "6f198975-6914-423f-d5f3-bfe92427f41e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kHhdOTYToon7",
+        "outputId": "0b5af81b-486a-43ce-d925-56f1fda2891b"
       },
-      "execution_count": 26,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1493,7 +1521,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# re-train best model on ALL trin+val data\n",
+        "# re-train best model on ALL train+val data\n",
         "if \"Linear Regression\" in best_model[\"Model\"]:\n",
         "    final_model = LinearRegression()\n",
         "elif \"KNN\" in best_model[\"Model\"]:\n",
@@ -1506,14 +1534,14 @@
         "final_model.fit(X_train_val, y_train_val)"
       ],
       "metadata": {
-        "id": "3iYirWVgXzs1",
-        "outputId": "ce7be901-d410-4e45-ae07-dbb7f44b5a1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "3iYirWVgXzs1",
+        "outputId": "1b805503-5c35-4b97-eda4-73c86a52dbec"
       },
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1941,7 +1969,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 24
         }
       ]
     },
@@ -1960,11 +1988,11 @@
         "print(f\"R2 Score: {r2_test:.4f}\")"
       ],
       "metadata": {
-        "id": "vXIotGU5Zich",
-        "outputId": "0edc3f47-1e36-4bea-c6f7-45b03e84a135",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vXIotGU5Zich",
+        "outputId": "0edc3f47-1e36-4bea-c6f7-45b03e84a135"
       },
       "execution_count": 28,
       "outputs": [
