--- a/Assignments/A01/Dangerfield_Assignment01.ipynb
+++ b/Assignments/A01/Dangerfield_Assignment01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdSf0oD4vr4nrtNIkwSN+z",
+      "authorship_tag": "ABX9TyMQ7DoYPuNH6Y4504rriOQX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "markdown",
       "source": [
         "# CMPS5323 - Assignment 1\n",
-        "In this assignment, I practice essential Machine Learning skills: data analysis, processing, visualization, modeling, evaluation, and performace. Using the the canopy cover dataset, cc2.csv, I performed at leas"
+        "In this assignment, I practice essential Machine Learning skills: data analysis, processing, visualization, modeling, evaluation, and performace. Using the the canopy cover dataset, cc2.csv, I performed  7 data manipulations, built three differnt models, and reported the reults."
       ],
       "metadata": {
         "id": "z3kzNv3fz3Ya"
@@ -1295,7 +1295,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Based on the boxplots, suggest reasonable values to replace the missing data\n",
+        "# replaced missing values using the median\n",
         "df = df.fillna(df.median(numeric_only=True))"
       ],
       "metadata": {
@@ -1316,6 +1316,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# import libraries for modeling\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.neighbors import KNeighborsRegressor\n",
@@ -1455,6 +1456,7 @@
         "# validation results table\n",
         "results_df = pd.DataFrame(results)\n",
         "\n",
+        "# print the final results\n",
         "print(\"\\nValidation Results:\")\n",
         "print(results_df)"
       ],
@@ -1982,6 +1984,7 @@
         "mae_test = mean_absolute_error(y_test, y_pred_test)\n",
         "r2_test = r2_score(y_test, y_pred_test)\n",
         "\n",
+        "# print the final test results\n",
         "print(\"\\nFinal Test Results:\")\n",
         "print(f\"Mean Squared Error: {mse_test:.4f}\")\n",
         "print(f\"Mean Absolute Error: {mae_test:.4f}\")\n",
